# Feedback-System

./: .env.example  .gitignore  DEPLOYMENT_GUIDE.md  DEPLOYMENT_README.md  DROPDOWN_FIX_GUIDE.md  DROPDOWN_TEST_CHECKLIST.md  EXCEL_UPLOAD_FIX_SUMMARY.md  FINAL_COMPLETE_SUMMARY.md  IMPROVEMENTS_SUMMARY.md  MANUAL_HOD.md  MANUAL_STAFF_STUDENTS.md  README.md  STRUCTURE.md  app.py  config.py  deencrypt.py  encrypt_existing_data.py  locustfile.py  main.py  mainrating.csv  pyproject.toml  ratings.csv  render.yaml  report_generator.py  report_non_submission.py  requirements.txt  staffs.csv  start_server.py  student.csv  subjects.csv  test.sh  test_report.py  utils.py
app/models/: database.py  student.py  supabase_db.py
app/services/: mapping_service.py
routes/: admin_routes.py  hod_routes.py
templates/: add_staff.html  admin_bulk_add.html  admin_dashboard.html  admin_login.html  admin_mapping.html  admin_students.html  admin_view_mappings.html  feedback.html  feedback_form.html  hod_login.html  hod_report.html  hod_select.html  student_login.html
