[project]
name = "feedback-system"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "asgiref==3.8.1",
    "blinker==1.9.0",
    "click==8.1.8",
    "colorama==0.4.6",
    "flask==3.1.0",
    "flask-cors==5.0.1",
    "h11==0.14.0",
    "itsdangerous==2.2.0",
    "jinja2==3.1.6",
    "markupsafe==3.0.2",
    "matplotlib==3.8.3",
    "openpyxl==3.1.2",
    "pandas==2.2.3",
    "python-dotenv==1.0.0",
    "reportlab==4.0.9",
    "rich==13.7.0",
    "supabase==2.22.0",
    "uvicorn==0.34.0",
    "werkzeug==3.1.3",
    "xlrd==2.0.1",
]
